--- a/examples/test-app/repositories.gradle
+++ b/examples/test-app/repositories.gradle
@@ -5,5 +5,5 @@ repositories {
     maven { url 'https://jitpack.io' }
     maven { url 'https://ci-artifactory.corda.r3cev.com/artifactory/corda' }
     maven { url 'https://repo.gradle.org/gradle/libs-releases' }
-    maven { url 'https://ci-artifactory.corda.r3cev.com/artifactory/corda-lib-dev' }
+    maven { url 'https://software.r3.com/artifactory/corda-lib-dev' }
 }
