--- a/examples/test-app/constants.properties
+++ b/examples/test-app/constants.properties
@@ -1,13 +1,14 @@
 cordaReleaseGroup=net.corda
 cordaCoreReleaseGroup=net.corda
-cordaVersion=4.5.1
-cordaCoreVersion=4.5.1
-gradlePluginsVersion=5.0.4
-kotlinVersion=1.2.71
+cordaVersion=4.12-RC02
+cordaCoreVersion=4.12-RC02
+gradlePluginsVersion=5.1.1
+kotlinVersion=1.9.22
 junitVersion=4.12
-quasarVersion=0.7.10
-log4jVersion=2.11.2
-platformVersion=5
-slf4jVersion=1.7.25
-nettyVersion=4.1.22.Final
-cordaContractsSdkVersion=0.9-SNAPSHOT
+quasarVersion=0.9.0_r3
+log4jVersion=2.23.1
+platformVersion=140
+slf4jVersion=2.0.12
+nettyVersion=4.1.77.Final
+cordaContractsSdkVersion=1.0-SNAPSHOT
+publicArtifactURL=https://download.corda.net/maven
