--- a/contract-sdk/build.gradle
+++ b/contract-sdk/build.gradle
@@ -1,9 +1,4 @@
-apply plugin: 'kotlin-jpa'
 apply plugin: 'net.corda.plugins.cordapp'
-
-if (!(corda_release_version in ['4.1'])) {
-    apply from: "${rootProject.projectDir}/deterministic.gradle"
-}
 
 sourceSets {
     main {
@@ -20,20 +15,24 @@ sourceSets {
 
 dependencies {
     // Kotlin.
-    compile "org.jetbrains.kotlin:kotlin-stdlib-jdk8:$kotlin_version"
+    implementation "org.jetbrains.kotlin:kotlin-stdlib-jdk8:$kotlin_version"
+    implementation "org.jetbrains.kotlin:kotlin-reflect:$kotlin_version"
 
     // Corda dependencies.
-    cordaCompile("$corda_release_group:corda-core:$corda_release_version") {
+    cordaProvided("$corda_release_group:corda-core:$corda_release_version") {
         changing = true
     }
 
     // Logging.
-    testCompile "org.apache.logging.log4j:log4j-slf4j-impl:${log4j_version}"
+    testImplementation "org.apache.logging.log4j:log4j-slf4j2-impl:${log4j_version}"
 
     // Testing.
-    testCompile "org.jetbrains.kotlin:kotlin-test:$kotlin_version"
-    testCompile "junit:junit:$junit_version"
-    testCompile "$corda_release_group:corda-node-driver:$corda_release_version"
+    testImplementation "org.jetbrains.kotlin:kotlin-test:$kotlin_version"
+    testImplementation "junit:junit:$junit_version"
+    testImplementation "$corda_release_group:corda-node-driver:$corda_release_version"
+    testImplementation"$corda_release_group:corda-core-test-utils:$corda_release_version"
+    testImplementation "$corda_release_group:corda-test-utils:$corda_release_version"
+
 }
 
 cordapp {
