--- a/examples/test-app/test-app-contracts/build.gradle
+++ b/examples/test-app/test-app-contracts/build.gradle
@@ -12,11 +12,17 @@ cordapp {
 }
 
 dependencies {
-    compile "org.jetbrains.kotlin:kotlin-stdlib-jdk8:$kotlin_version"
+    implementation "org.jetbrains.kotlin:kotlin-stdlib-jdk8:$kotlin_version"
+    testImplementation "junit:junit:$junit_version"
     // Corda dependencies.
-    cordaCompile "$corda_core_release_group:corda-core:$corda_core_release_version"
-    testCompile "$corda_release_group:corda-node-driver:$corda_release_version"
-
+    cordaProvided "$corda_core_release_group:corda-core:$corda_core_release_version"
+    testImplementation "$corda_release_group:corda-node-driver:$corda_release_version"
+    testImplementation "$corda_release_group:corda-test-utils:$corda_release_version"
+    testImplementation("$corda_release_group:corda-core-test-utils:$corda_release_version")
     // CorDapp dependencies.
-    compile "com.r3.corda.lib.contracts:contract-sdk:$corda_contracts_sdk_version" //you could use "cordaCompile" instead of "compile" if you want to keep the contract sdk jar separate
+    cordaProvided "com.r3.corda.lib.contracts:contract-sdk:$corda_contracts_sdk_version" //you could use "cordaCompile" instead of "compile" if you want to keep the contract sdk jar separate
+}
+
+test {
+    jvmArgs = rootProject.ext.testJvmArgs
 }
