--- a/.ci/Jenkinsfile
+++ b/.ci/Jenkinsfile
@@ -22,10 +22,20 @@ pipeline {
         timeout(3*60) // 3 hours
         buildDiscarder(logRotator(daysToKeepStr: '7', artifactDaysToKeepStr: '7'))
     }
+
+    environment {
+        JAVA_HOME="/usr/lib/jvm/java-17-amazon-corretto"
+    }
+
     stages {
         stage('Build contract-sdk') {
             steps {
                 sh './gradlew clean build --no-daemon --refresh-dependencies --info'
+            }
+        }
+        stage('Deploy test CorDapp') {
+            steps {
+                sh './gradlew clean examples:test-app:deployNodes --no-daemon --refresh-dependencies --info'
             }
         }
         stage('Publish to Artifactory') {
