--- a/.ci/Jenkinsfile
+++ b/.ci/Jenkinsfile
@@ -25,7 +25,7 @@ def isReleaseBranch() {
 }
 
 def isRelease = isReleaseTag() || isReleaseCandidate()
-String publishOptions = (isReleaseBranch() || isRelease) ? "-s --info" : "--no-daemon -s -PversionFromGit"
+String publishOptions = (isReleaseBranch() || isRelease) ? "-s --info" : "--no-daemon -s"
 
 pipeline {
     agent { label 'standard' }
