--- a/constants.properties
+++ b/constants.properties
@@ -16,3 +16,4 @@ aetherVersion=1.0.0.v20140518
 mavenVersion=3.1.0
 mavenResolverVersion=1.1.1
 publicArtifactURL=https://download.corda.net/maven
+artifactPluginVersion=4.29.0
