Fix Jenkins publishing

--- a/gradle.properties
+++ b/gradle.properties
@@ -3,4 +3,6 @@ group=net.corda
 version=0.1
 kotlin.incremental=false
 org.gradle.caching=false
-
+artifactoryContextUrl=https://software.r3.com/artifactory
+publicArtifactURL=https://download.corda.net/maven
+internalPublishVersion=1.+
