--- a/build.gradle
+++ b/build.gradle
@@ -49,8 +49,8 @@ buildscript {
 }
 
 plugins {
-    id 'maven-publish'
-    id "com.jfrog.artifactory" version "$artifactPluginVersion"
+    id 'org.jetbrains.kotlin.plugin.jpa' version "$kotlin_version" apply false
+    id 'corda.root-publish'
 }
 
 allprojects {
@@ -134,23 +134,6 @@ configure(publishProjects) { Project subproject ->
 
                 pom {
                     description = subproject.description
-                }
-            }
-        }
-    }
-
-    artifactory {
-        publish {
-            contextUrl = 'https://software.r3.com/artifactory'
-            repository {
-                repoKey = 'corda-lib-dev'
-                username = System.getenv('ARTIFACTORY_USERNAME') ?: System.getProperty('corda.artifactory.username')
-                password = System.getenv('ARTIFACTORY_PASSWORD') ?: System.getProperty('corda.artifactory.password')
-            }
-
-            defaults {
-                if (publishProjects.contains(project)) {
-                    publications(project.name)
                 }
             }
         }
