--- a/examples/test-app/build.gradle
+++ b/examples/test-app/build.gradle
@@ -24,8 +24,8 @@ buildscript { //properties that you need to build the project
     repositories {
         mavenLocal()
         mavenCentral()
-        jcenter()
         maven { url 'https://ci-artifactory.corda.r3cev.com/artifactory/corda-releases' }
+        maven { url "${publicArtifactURL}/jcenter-backup" }
     }
 
     dependencies {
@@ -43,9 +43,9 @@ allprojects { //Properties that you need to compile your project (The applicatio
 
     repositories {
         mavenLocal()
-        jcenter()
         mavenCentral()
         maven { url 'https://software.r3.com/artifactory/corda' }
+        maven { url "${publicArtifactURL}/jcenter-backup" }
         maven { url 'https://jitpack.io' }
     }
 
