--- a/build.gradle
+++ b/build.gradle
@@ -24,8 +24,8 @@ buildscript {
     repositories {
         mavenCentral()
         mavenLocal()
-        maven { url "http://ci-artifactory.corda.r3cev.com/artifactory/corda-releases" }
-        maven { url "http://ci-artifactory.corda.r3cev.com/artifactory/corda-dependencies" }
+        maven { url "${publicArtifactURL}/corda-releases" }
+        maven { url "${publicArtifactURL}/corda-dependencies" }
         maven { url "https://repo.gradle.org/gradle/libs-releases-local/" }
         maven { url "${publicArtifactURL}/jcenter-backup" }
     }
@@ -67,12 +67,12 @@ subprojects {
         mavenCentral()
         mavenLocal()
         maven { url 'https://jitpack.io' }
-        maven { url "http://ci-artifactory.corda.r3cev.com/artifactory/corda-dev" }
-        maven { url "http://ci-artifactory.corda.r3cev.com/artifactory/corda-releases" }
-        maven { url "http://ci-artifactory.corda.r3cev.com/artifactory/corda-lib" }
-        maven { url "http://ci-artifactory.corda.r3cev.com/artifactory/corda-lib-dev" }
+        maven { url "${publicArtifactURL}/corda-dev" }
+        maven { url "${publicArtifactURL}/corda-releases" }
+        maven { url "${publicArtifactURL}//corda-lib" }
+        maven { url "${publicArtifactURL}/corda-lib-dev" }
         maven { url "https://repo.gradle.org/gradle/libs-releases-local/" }
-        maven { url "http://ci-artifactory.corda.r3cev.com/artifactory/corda-dependencies" }
+        maven { url "${publicArtifactURL}/corda-dependencies" }
         maven { url "${publicArtifactURL}/jcenter-backup" }
     }
 
