--- a/examples/test-app/build.gradle
+++ b/examples/test-app/build.gradle
@@ -24,7 +24,7 @@ buildscript { //properties that you need to build the project
     repositories {
         mavenLocal()
         mavenCentral()
-        maven { url 'https://ci-artifactory.corda.r3cev.com/artifactory/corda-releases' }
+        maven { url "${publicArtifactURL}/corda-releases" }
         maven { url "${publicArtifactURL}/jcenter-backup" }
     }
 
@@ -44,7 +44,7 @@ allprojects { //Properties that you need to compile your project (The applicatio
     repositories {
         mavenLocal()
         mavenCentral()
-        maven { url 'https://software.r3.com/artifactory/corda' }
+        maven { url "${publicArtifactURL}/corda" }
         maven { url "${publicArtifactURL}/jcenter-backup" }
         maven { url 'https://jitpack.io' }
     }
